--- a/.astropod/social.config.json
+++ b/.astropod/social.config.json
@@ -1,8 +1,8 @@
 {
   "facebook": "",
   "twitter": "",
-  "youtube": "",
-  "instagram": "",
+  "youtube": "https://www.youtube.com/@egytranszpodcast",
+  "instagram": "https://www.instagram.com/@egytranszpodcast",
   "github": "",
   "telegram": "",
   "linkedin": "",
