--- a/.astropod/listenOn.config.json
+++ b/.astropod/listenOn.config.json
@@ -1,7 +1,7 @@
 {
-  "spotify": "",
+  "spotify": "https://open.spotify.com/show/6bApo4QhluQFBHHo4pUFnS",
   "googlePodcast": "",
-  "applePodcast": "",
+  "applePodcast": "https://podcasts.apple.com/hu/podcast/egy-transz-podcast/id1627908349",
   "easyPodcast": "",
   "amazonMusic": "",
   "fountain": "",
